# Eye-Tracker-Password-PC

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  settings.py
capturers/: __init__.py  haar_blob.py
frame_sources/: camera.py  file.py  folder.py  video.py
gaze_tracking/: gaze_tracking.py
gui/: calibration_screen.py  camera_window.py  main_window.py  password_screen.py  pupil_check.py  success_screen.py  window.py
gui/assets/: Calibration.ui  Configuration.ui.example  GUImain.ui  Landing.ui  Password.ui  Response.ui  SetSequence.ui  style.css
gui/components/configuration/: password_widget.py
gui/data/: Icons.py  ScreenConst.py
gui/screens/: calibration_screen.py  landing_screen.py  password_screen.py  success_screen.py
gui/screens/configure_screens/: configuration_screen.py  set_sequence_screen.py
gui/screens/password_screens/: calibration_screen.py  password_screen.py  success_screen.py
gui/states/: state.py
utils/: counter.py
