[tool.poetry]
name = "eye-pass"
version = "0.2.0"
description = "An Eye-tracking password solution"
authors = ["Wisnu Pramoedya <wisnupramoedya@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.4"
opencv-python = "4.5.4.60"
PyQt6 = "^6.2.1"
qtawesome = "^1.2.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"

[tool.poetry.group.dev.dependencies]
pyqt6-tools = "^6.4.2.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
